--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_edittext"
                     android:fontFamily="@font/proxima_nova_regular"
-                    android:hint="@string/email"
+                    android:hint="@string/full_name"
                     android:inputType="textCapWords"
                     android:paddingStart="@dimen/_20sdp"
                     android:paddingTop="@dimen/_10sdp"
@@ -156,7 +156,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_edittext"
                     android:fontFamily="@font/proxima_nova_regular"
-                    android:hint="@string/password"
+                    android:hint="@string/phone_number"
                     android:inputType="phone"
                     android:paddingStart="@dimen/_20sdp"
                     android:paddingTop="@dimen/_10sdp"
@@ -187,10 +187,10 @@
                 android:id="@+id/linearLayoutAlreadyHaveAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_20sdp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_margin="@dimen/_20sdp"
                 app:layout_constraintTop_toBottomOf="@+id/buttonRegister">
 
                 <TextView
@@ -208,7 +208,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_2sdp"
                     android:fontFamily="@font/proxima_nova_regular"
-                    android:onClick="@{clickHandler::onRegisterClick}"
+                    android:onClick="@{clickHandler::onLogInClick}"
                     android:text="@string/login"
                     android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/_10ssp" />
